# VectronBot

./: .gitignore  README.md  bot.py  bridge.py  config.ini.example  config.py  database.py  filehandler.py  irc_connections.py  irc_server.py  pyproject.toml  tg_bot.py  vectronbot_irc_plugin.py
tests/: test_vectronbot.py
vectronbot/: bot.py  bridge.py  config.py  database.py  filehandler.py  irc_connections.py  irc_server.py  tg_bot.py  vectronbot_irc_plugin.py
