[tool.poetry]
name = "VectronBot"
version = "0.1.0"
description = "This bot creates a bridge between a Telegram group and an IRC channel."
authors = ["Postal", "Grabunhold"]

[tool.poetry.scripts]
vectronbot = 'vectronbot.bot:start_tg_bot'

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^7.0.0"
python-telegram-bot = "^12.3.0"
irc3 = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
